# trustworthy-notes

./: .gitignore  CLAUDE.md  README.md  mise.toml  pyproject.toml  tn.spec
.claude/: settings.json
.claude/agents/: architect.md  convention-compliance-reviewer.md  critic.md  methodology-reviewer.md  project-manager.md  reviewer.md  software-engineer.md
.github/workflows/: release.yml
.pkit/: manifest.yaml
.pkit/adapters/: README.md
.pkit/agents/: README.md
.pkit/cli/: README.md  pkit
.pkit/decisions/: README.md
.pkit/permissions/: README.md  decide.py  projection.py
.pkit/rules/: README.md  core.md
.pkit/schemas/: README.md  confinement-toolkit.schema.json  confinement-toolkit.yaml  permission-config.schema.json  permission-config.yaml  (+6 more)
docs/: ARCHITECTURE.md  EVAL.md  METHODOLOGY.md  PACKAGING.md
scripts/: bootstrap.ps1  bootstrap.sh  stamp_build.py
tests/: test_adjudicate.py  test_book.py  test_cli_book.py  test_cli_config.py  test_cli_cost.py  test_cli_encoding.py  test_cli_export.py  test_cli_feedback.py  test_cli_maclaunch.py  test_cli_run.py  test_cli_upgrade.py  test_cli_winlaunch.py  test_compose.py  test_config.py  test_eval.py  test_eval_capture.py  test_export.py  test_extract.py  test_extract_anthropic.py  test_feedback.py  test_gap.py  test_ingest.py  test_ingest_patterns.py  test_maclaunch.py  test_normalize.py  test_notes.py  test_onboarding.py  test_pdf.py  test_pipeline.py  test_pricing.py  test_relate.py  test_report.py  test_resources.py  test_term_store.py  test_translit.py  test_updater.py  test_winlaunch.py  test_workspace.py
(+290 files in other folders)
