[project]
name = "trustworthy-notes"
version = "0.6.1"
description = "Trustworthy, evidence-anchored notes from PDF documents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pdfplumber>=0.11",
    "pyyaml>=6",
    "jsonschema>=4",
    "anthropic>=0.40",
    "reportlab>=4",
]

[project.scripts]
tnotes = "trustworthy_notes.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
]
# Freezing the CLI into a one-file executable (see tn.spec / docs/PACKAGING.md).
# Kept separate from dev so test runs don't pull the build toolchain.
build = [
    "pyinstaller>=6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trustworthy_notes"]
